--- a/index.html
+++ b/index.html
@@ -166,6 +166,33 @@
             </div>
     </section>
 
+    <section id="features" class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Testimonials</h2>
+                        <p class="text-muted"></p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 text-center">
+                    <p class="text-muted">
+                        <iframe id="ytplayer" type="text/html" width="640" height="390"
+                          src="https://www.youtube.com/embed/rq_JMDfN5YE?autoplay=0" frameborder="0"></iframe>
+                        
+                    </p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img height="200px" src="https://c1.iggcdn.com/indiegogo-media-prod-cld/image/upload/c_limit,w_620/v1445290983/wj5uvqnglgrxrc0dokem.png" alt="api.ai" />
+                    <p>Our product was reviewed by Api.ai and was featured in DZone and can be found <a style="color: #337ab7;" href="http://dzone.com/articles/how-we-developed-the-official-chatbot-for-sfs-outs">here</a></p>
+                    <img height="150px" src="/img/outsidelands.png" alt="Outside Lands" />
+                </div>
+            </div>
+    </section>
+
     <section class="cta">
         <div class="cta-content">
             <div class="container">
